# RayTracerCPP

./: .gitignore  README.md
tp1/: champignon.blend  champignon.blend1
tp2/: .gitignore  CMakeLists.txt  premake4.lua  premake4Tests.lua
tp2/darkstyle/: darkstyle.qrc
tp2/data/: burger01.mtl  materials.mtl  robot.mtl  stanford_bunny.mtl
tp2/data/Geometry/: geometry.mtl
tp2/data/Robot/: robot.mtl
tp2/projets/: analyticShape.cpp  analyticShape.h  benchmark.cpp  benchmark.h  bvh.cpp  bvh.h  camera.cpp  camera.h  hitInfo.h  light.h  main.cpp  mainUtils.cpp  meshIOUtils.cpp  meshIOUtils.h  objUtils.cpp  objUtils.h  ray.cpp  ray.h  rayTracer.cpp  rayTracer.h  renderer.cpp  renderer.h  scene.h  settings.h  tests.cpp  timer.cpp  timer.h  triangle.cpp  triangle.h
tp2/projets/QT/: clickablecolorqframe.h  editMaterialDialog.cpp  editMaterialDialog.h  editMaterialDialog.ui  form.ui  graphicsViewZoom.cpp  graphicsViewZoom.h  mainWindowThreads.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtUtils.cpp  qtUtils.h
tp2/projets/SIMD/: m256Point.cpp  m256Point.h  m256Triangles.h  m256Utils.cpp  m256Utils.h  m256Vector.cpp  m256Vector.h
tp2/projets/renderer/: buffer.cpp  buffer.h  renderer.cpp  renderer.h  rendererSettings.cpp  rendererSettings.h  skybox.cpp  skybox.h  xorshift.h
tp2/projets/scene/: camera.cpp  camera.h  light.h  scene.h
tp2/projets/utils/: colorUtils.h  imageUtils.h  mainUtils.cpp  mainUtils.h  meshIOUtils.cpp  meshIOUtils.h  objUtils.cpp  objUtils.h
tp2/src/: color.cpp  color.h  image.h  image_io.cpp  image_io.h  mat.cpp  mat.h  materials.h  mesh_io.cpp  mesh_io.h  vec.cpp  vec.h
tp3Courbes/: main.cpp
tpBVH/: .gitignore
tpBVH/src/: box.cpp  box.h  main.cpp  naive_nearest.cpp  naive_nearest.h  sampling.cpp  sampling.h  svg.h  tree.cpp  tree.h
